# Image-Report

./: LICENSE  README.md  analysis.py  extract_average_hash.c  hashing_config.py  ir  ir.py  papersize.py  pyproject.toml  requirements.txt  utils.py
docs/: report-schema-v2.md
tests/: test_analysis.py  test_hashing_config.py  test_papersize.py  test_parse_args.py  test_rle.py  test_utils.py  test_utils_logging.py
